--- a/frontend/src/app/components/board/board-new/board-new.component.html
+++ b/frontend/src/app/components/board/board-new/board-new.component.html
@@ -1,5 +1,7 @@
 <div class="board-new" (click)="create()" (focusout)="reset()">
-  <ng-content *ngIf="!createMode"></ng-content>
+  <div class="board-new-button">
+    <ng-content *ngIf="!createMode"></ng-content>
+  </div>
   <div *ngIf="createMode">
     <textarea (keydown.enter)="save($event)" (keydown.esc)="reset()"></textarea>
   </div>
