--- a/frontend/src/app/components/board/board-new/board-new.component.css
+++ b/frontend/src/app/components/board/board-new/board-new.component.css
@@ -1,7 +1,6 @@
 .board-new {
   width: 100%;
   min-width: 250px;
-  padding: 5px;
   border-radius: 3px;
   text-align: left;
   font-size: 11pt;
@@ -15,5 +14,13 @@
   padding: 5px;
   border-radius: 3px;
   cursor: pointer;
-  margin-left: -5px;
+}
+
+.board-new-button {
+  border-radius: 3px;
+  padding: 5px;
+}
+
+.board-new-button:hover {
+  background-color: #bbb;
 }
