Add lists and cards

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -2,4 +2,4 @@
 <div class="dashboard-header">
   {{ (board$ | async).name }}
 </div>
-<app-board></app-board>
+<app-board [boardId]="(board$|async)._id"></app-board>
