Changes in header buttons

--- a/frontend/src/app/components/topbar/boards-preview-modal/boards-preview-modal.component.html
+++ b/frontend/src/app/components/topbar/boards-preview-modal/boards-preview-modal.component.html
@@ -1,7 +1,9 @@
-<h1 mat-dialog-title>Boards</h1>
-<div mat-dialog-content>
-  <p>Boards</p>
-</div>
-<div mat-dialog-actions>
+<div class="boards-preview">
+  <h1 mat-dialog-title>Boards</h1>
+  <div mat-dialog-content>
+    <p>Boards</p>
+  </div>
+  <div mat-dialog-actions>
 
+  </div>
 </div>
