--- a/frontend/src/app/components/board/board.component.html
+++ b/frontend/src/app/components/board/board.component.html
@@ -1,5 +1,6 @@
 <div class="board-container">
-  <div *ngFor="let list of (lists$ | async) | sortBy : 'position'; let listIndex = index" class="list">
+  <div *ngFor="let list of (lists$ | async) | sortBy : 'position'; let listIndex = index" class="list" (dragover)="allowDrop($event)"
+    (dragstart)="dragList(list, listIndex)" (drop)="dropList(list, listIndex)">
 
     <div class="drop-zone title" (drop)="dropCard(list, 0)" (dragover)="allowDrop($event)">
       <app-list-header [list]="list">
@@ -16,14 +17,14 @@
     </div>
 
     <div class="drop-zone" (drop)="dropCard(list, -1)" (dragover)="allowDrop($event)">
-      <app-board-new [collection]="'cards'" [parent]="list._id">Add a card...</app-board-new>
+      <app-board-new [collection]="'cards'" [parent]="list._id" [position]="list.cards.length">Add a card...</app-board-new>
     </div>
 
   </div>
 
   <div class="list">
     <div class="drop-zone">
-      <app-board-new [collection]="'lists'" [parent]="boardId">Add a list...</app-board-new>
+      <app-board-new [collection]="'lists'" [parent]="boardId" [position]="(lists$ | async ).length">Add a list...</app-board-new>
     </div>
   </div>
 </div>
