--- a/frontend/src/app/components/topbar/boards-preview/boards-preview.component.css
+++ b/frontend/src/app/components/topbar/boards-preview/boards-preview.component.css
@@ -1,4 +1,7 @@
 .boards-btn {
+  position: absolute;
+  top: 2px;
+  left: 5px;
   border-radius: 3px;
   background-color: #4e97c2;
   color: #fff;
@@ -12,7 +15,7 @@
   background-color: #3588b9;
 }
 
-.cdk-overlay-pane {
-  position: fixed;
+.sidebar {
+  top: 44px;
   left: 0;
 }
