--- a/frontend/src/app/components/topbar/boards-preview/boards-preview.component.html
+++ b/frontend/src/app/components/topbar/boards-preview/boards-preview.component.html
@@ -1,1 +1,7 @@
-<button class="boards-btn" (click)="openModal()">Boards</button>
+<button class="boards-btn" (click)="toggle()" mat-button>Boards</button>
+
+<div class="sidebar" *ngIf="visible">
+  <div class="sidebar-content">
+    <h1>Here we are going to load the boards</h1>
+  </div>
+</div>
