--- a/frontend/src/app/components/board/board-card/board-card.component.css
+++ b/frontend/src/app/components/board/board-card/board-card.component.css
@@ -5,4 +5,30 @@
   padding: 5px;
   border-radius: 3px;
   cursor: pointer;
+  min-height: 60px;
+}
+
+.dueDate {
+  background-color: #eb5a46;
+  border-radius: 3px;
+  color: #fff;
+  display: inline-block;
+  padding: 0;
+  height: 24px;
+  margin-bottom: 5px;
+}
+
+.dueDate .icon {
+  font-size: 10pt;
+  float: left;
+  margin-top: 5px;
+  margin-left: -27px;
+  margin-right: 33px;
+  height: 8px;
+}
+
+.dueDate .date {
+  float: right;
+  margin-top: 2px;
+  margin-right: 2px;
 }
