--- a/frontend/src/app/components/board/card-modal/card-modal.component.html
+++ b/frontend/src/app/components/board/card-modal/card-modal.component.html
@@ -1,7 +1,11 @@
-<h1 mat-dialog-title>Card Modal =D</h1>
-<div mat-dialog-content>
-  <p>{{data.name}}</p>
-</div>
-<div mat-dialog-actions>
-  <button (click)="onNoClick()">No Thanks</button>
+<div *ngIf="card$ | async as card">
+  <h1 mat-dialog-title>
+    <mat-icon class="icon">description</mat-icon>
+    {{card.name}}
+    <button (click)="close()" class="close-btn">X</button>
+  </h1>
+  <div mat-dialog-content>
+    <app-card-modal-members [card]="card"></app-card-modal-members>
+    <app-card-modal-description [card]="card"></app-card-modal-description>
+  </div>
 </div>
