--- a/frontend/src/app/components/topbar/topbar.component.html
+++ b/frontend/src/app/components/topbar/topbar.component.html
@@ -3,7 +3,7 @@
       <app-boards-preview></app-boards-preview>      
   </span>
   <span class="center">
-    <a [routerLink]="['/','home']">Boards.js</a>
+    <a [routerLink]="['/','route']">Boards.js</a>
   </span>
   <span>
     User
