--- a/frontend/src/app/components/board/card-modal/card-modal-description/card-modal-description.component.css
+++ b/frontend/src/app/components/board/card-modal/card-modal-description/card-modal-description.component.css
@@ -8,3 +8,14 @@
   border: none;
   background: none;
 }
+
+.description button span {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.description textarea {
+  width: 100%;
+  padding: 5px;
+  border-radius: 3px;
+}
