--- a/frontend/src/app/components/board/card-modal/card-modal.component.html
+++ b/frontend/src/app/components/board/card-modal/card-modal.component.html
@@ -1,7 +1,6 @@
 <div *ngIf="card$ | async as card">
   <h1 mat-dialog-title>
-    <mat-icon class="icon">description</mat-icon>
-    {{card.name}}
+    <app-card-modal-title [card]="card"></app-card-modal-title>
     <button (click)="close()" class="close-btn">X</button>
   </h1>
   <div mat-dialog-content>
