--- a/frontend/src/app/team-dashboard/team-dashboard.component.html
+++ b/frontend/src/app/team-dashboard/team-dashboard.component.html
@@ -1,4 +1,5 @@
 
+<app-topbar></app-topbar>
 <div class="board-container" *ngIf="team$ | async as teams">
 <div *ngFor="let team of teams; let listIndex = index">
   <div>
