--- a/frontend/src/app/components/board/card-modal/card-modal.component.css
+++ b/frontend/src/app/components/board/card-modal/card-modal.component.css
@@ -29,3 +29,11 @@ h1 {
   width: 19%;
   vertical-align: top;
 }
+
+.inline-block {
+  display: inline-block;
+}
+
+.inline-block.members {
+  margin-right: 20px;
+}
