--- a/frontend/src/app/team-dashboard/team-dashboard.component.css
+++ b/frontend/src/app/team-dashboard/team-dashboard.component.css
@@ -1,28 +1,18 @@
-.board-container {
+.team {
   display: block;
-  overflow-y: hidden;
-  overflow-x: auto;
-  height: 100%;
-  white-space: nowrap;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 10pt;
+  padding: 10px;
+  margin: 5px 5px 15px 5px;
 }
 
-.board-container .list {
-  position: relative;
-  display: inline-block;
-  height: 100%;
-  vertical-align: top;
-  background-color: #e0e0e6;
-  border-radius: 5px;
+.team h2 {
+  font-weight: bold;
+  font-size: 15pt;
   margin: 5px;
 }
 
-.board-container .list .title {
-  font-weight: bold;
-  font-size: 11pt;
-}
-
-.board-container .list .drop-zone {
-  padding: 10px;
+.board {
+  display: inline-block;
+  cursor: pointer;
 }
