--- a/frontend/src/app/team-dashboard/team-dashboard.component.css
+++ b/frontend/src/app/team-dashboard/team-dashboard.component.css
@@ -1,3 +1,8 @@
+.team-container {
+  width: 80%;
+  margin: auto;
+}
+
 .team {
   display: block;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -15,4 +20,10 @@
 .board {
   display: inline-block;
   cursor: pointer;
+}
+
+@media (max-width: 1000px) {
+  .team-container {
+    width: 100%;
+  }
 }
