--- a/frontend/src/app/team-dashboard/team-dashboard.component.css
+++ b/frontend/src/app/team-dashboard/team-dashboard.component.css
@@ -17,6 +17,21 @@
   margin: 5px;
 }
 
+.team h2 span {
+  margin-right: 15px;
+}
+
+.team h2 button {
+  border: none;
+  background-color: #dee0e0;
+  padding: 5px;
+  text-align: left;
+  border-radius: 3px;
+  box-shadow: 0 1px 3px #aaa;
+  font-weight: normal;
+  font-size: 12pt;
+}
+
 .board {
   display: inline-block;
   cursor: pointer;
