--- a/frontend/src/app/components/team/team-board-modal/team-board-modal.component.html
+++ b/frontend/src/app/components/team/team-board-modal/team-board-modal.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Create a new board</h1>
+<h1 mat-dialog-title>Create a new board for {{data.name}}</h1>
 <div mat-dialog-content>
   <mat-form-field>
     <input matInput [(ngModel)]="boardName" class="input">
