--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+html,
+body {
+  height: calc(100% - 40px);
+}
+
 .sidebar {
   position: fixed;
   background-color: #fff;
