--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,23 +1,108 @@
-<div class="container">
+<div class="home-container">
 
   <video autoplay="" loop="">
     <source src="../../assets/videos/banner.mp4" type="video/mp4">
     <source src="../../assets/videos/banner.webm" type="video/webm">
+    <img src="../../assets/videos/banner.jpg" title="Your browser does not support video tag">
   </video>
 
-  <div class="row">
-    <div class="col-sm-5"></div>
-    <div class="col-sm-2">
-      <button onclick="document.getElementById('id01').style.display='block'">Log In</button>
+  <div class="top-menu-container">
+    <div class="top-menu">
+      <span class="center">
+        <a [routerLink]="['/']">Boards.js</a>
+      </span>
+      <span>
+        <button class="green" onclick="document.getElementById('id02').style.display='block'">Sign Up</button>
+        <button class="blue" onclick="document.getElementById('id01').style.display='block'">Log In</button>
+      </span>
     </div>
-    <div class="col-sm-5"></div>
   </div>
-  <div class="row">
-    <div class="col-sm-5"></div>
-    <div class="col-sm-2">
-      <button onclick="document.getElementById('id02').style.display='block'">Sign Up</button>
-    </div>
-    <div class="col-sm-5"></div>
+
+  <div class="description">
+    <h1>
+      Boards.js lets you work more collaboratively and get more done.
+    </h1>
+    <button onclick="document.getElementById('id02').style.display='block'">
+      Sign up - It's free
+    </button>
+  </div>
+
+  <div class="content">
+    imperdiet congue. Donec ac maximus orci. Ut libero lorem, dapibus non luctus eu, pellentesque sit amet odio. Pellentesque
+    rhoncus purus quis lacus facilisis, ac cursus arcu placerat. Phasellus aliquet eget libero id pretium. Etiam eu ullamcorper
+    turpis, eu finibus neque. Sed sed cursus lorem. Sed vehicula gravida cursus. Pellentesque in lacinia lorem, in fermentum
+    nisl. Duis ut euismod eros, quis tincidunt lectus. Integer varius dui porta ligula egestas, id faucibus sem condimentum.
+    Mauris maximus vehicula justo. Donec nisi velit, scelerisque commodo ipsum a, faucibus lobortis magna. Cras hendrerit
+    felis condimentum, gravida purus efficitur, pharetra orci. Donec a semper tellus. Vestibulum fringilla risus at mi mattis
+    condimentum. Quisque faucibus auctor porttitor. Nulla molestie tincidunt magna. Nullam quis felis in eros lacinia feugiat.
+    Aenean quis lacus id nisl egestas lacinia et eu neque. Vivamus auctor lorem eu orci scelerisque, eu accumsan felis dapibus.
+    Quisque finibus nec felis quis gravida. Vivamus vulputate vitae nisi sed eleifend. Duis interdum nulla mauris, nec tristique
+    velit pretium at. Sed orci nisl, tincidunt vitae nulla quis, pretium ultricies velit. Curabitur dictum faucibus lacus
+    a lobortis. Donec suscipit erat non massa convallis, vitae aliquet mauris blandit. Interdum et malesuada fames ac ante
+    ipsum primis in faucibus. Curabitur posuere mattis malesuada. Curabitur a vulputate nunc, sit amet finibus ipsum. In
+    hendrerit ex orci, sollicitudin efficitur nisi tempor eget. Mauris ac tortor et turpis gravida sodales. Suspendisse id
+    mauris diam. Maecenas sit amet justo sapien. Sed ornare tortor erat, quis placerat est eleifend quis. In auctor diam
+    eros, eu fringilla tortor tincidunt vitae. Integer scelerisque ante mattis, elementum elit ut, posuere erat. Sed augue
+    magna, laoreet id maximus ut, varius in magna. Nullam ut tortor tristique, dignissim arcu vitae, facilisis nunc. Sed
+    felis lectus, dictum sed mauris at, ullamcorper varius ex. Mauris cursus at urna non semper. Etiam malesuada suscipit
+    justo sit amet fringilla. Aliquam viverra neque augue, ac eleifend ante rhoncus sit amet. Donec imperdiet urna lacinia
+    tellus porttitor, sit amet tempus urna interdum. Vivamus massa augue, lobortis sed interdum quis, aliquet eu erat. Donec
+    et fringilla odio. Nam nunc mauris, facilisis eget tellus eu, placerat mattis justo. Pellentesque pellentesque risus
+    nibh, ac commodo ex commodo et. Maecenas placerat cursus porttitor. Phasellus iaculis tincidunt lacinia. Proin ornare
+    velit et libero congue mattis. Suspendisse rutrum vehicula sem ut hendrerit. Donec rutrum ante non nibh volutpat, non
+    iaculis diam elementum. Nulla suscipit tempor placerat. Maecenas varius finibus nunc egestas porta. Phasellus tristique
+    vehicula nibh, et gravida dolor fermentum cursus. Nullam convallis nunc vel felis vehicula sagittis. Mauris pretium leo
+    quam, et tincidunt lorem maximus sit amet. Donec sagittis finibus mauris vel sodales. Suspendisse non diam finibus, fringilla
+    tortor ac, lobortis libero. Duis consequat erat est, non lobortis mi scelerisque vitae. Donec nec velit quis augue blandit
+    faucibus. Duis dictum dui sed tellus dapibus, sed accumsan risus tincidunt. Pellentesque vel ullamcorper est. Nulla eget
+    tincidunt purus. Aliquam fringilla, libero id finibus bibendum, tellus nunc ultrices lorem, ut tristique massa eros eget
+    leo. Duis sed ipsum nisi. Pellentesque et dui vestibulum, tincidunt ex ut, placerat felis. Vestibulum malesuada ut elit
+    at venenatis. Nullam bibendum consequat lobortis. Duis tempus turpis quam, quis cursus odio malesuada non. Praesent ultricies
+    sed velit vitae luctus. Nam id velit eu lectus imperdiet gravida ut sit amet nibh. In non faucibus justo. Donec convallis
+    lorem vel vehicula ornare. Vestibulum ut tortor ut erat ultrices lobortis. Proin nibh ex, dapibus quis magna in, consectetur
+    venenatis tortor. Integer bibendum libero non justo iaculis, eget congue felis tempor. Duis ullamcorper urna et consequat
+    luctus. Fusce eget ante ac risus dapibus lobortis sed vel leo. Nulla facilisi. Integer neque sapien, egestas ac diam
+    et, pretium pulvinar sapien. Proin aliquam in ipsum at ultrices. Donec quam enim, viverra et enim sit amet, dictum sagittis
+    nibh. Nunc porttitor mi eget enim sollicitudin, id tempus lectus aliquet. Duis felis leo, placerat id convallis in, malesuada
+    quis ipsum. Aenean finibus pretium nunc vel mollis. Nulla sit amet turpis sapien. Curabitur laoreet commodo augue, luctus
+    aliquet justo imperdiet ac. Donec eu facilisis dolor, in tristique nunc. Proin varius vitae ante eu posuere. Sed tortor
+    ipsum, finibus ac luctus ut, suscipit vel nibh. Pellentesque vitae dolor vitae dolor lacinia tempor. Duis eu condimentum
+    magna. Nam elementum risus a nulla suscipit, vitae tempor lectus varius. Curabitur semper maximus urna, a sagittis orci
+    sagittis eget. Aliquam erat volutpat. Proin ullamcorper porta enim, non placerat neque bibendum id. Vivamus luctus est
+    eu sollicitudin scelerisque. Sed id vestibulum velit. Nulla ullamcorper, urna id scelerisque venenatis, felis eros euismod
+    tortor, non dapibus justo purus vel nulla. Pellentesque porttitor nec enim sed fringilla. Phasellus vel sem a nisl tempus
+    aliquam at ac enim. Aliquam erat volutpat. Aliquam elementum turpis eget ligula feugiat gravida. Fusce eleifend non nulla
+    ut molestie. Sed varius ex eu mi porttitor, id placerat tortor tempus. Donec fringilla pellentesque risus sit amet imperdiet.
+    Sed molestie odio ut lorem feugiat, accumsan rutrum risus suscipit. Duis a velit facilisis, imperdiet massa vitae, sagittis
+    felis. Proin vel mollis dui. Aliquam ut nisi non purus semper sodales nec sed ipsum. Morbi accumsan ullamcorper est,
+    eget tempor nulla rhoncus sed. Aliquam ipsum eros, tristique sit amet augue non, consectetur cursus quam. Nulla lobortis
+    elementum eros non ultrices. Suspendisse malesuada mattis dui ut iaculis. Sed condimentum, sapien vitae posuere varius,
+    dolor justo tincidunt quam, sit amet pharetra ex nunc ultricies metus. Quisque vulputate mi eu ipsum dapibus scelerisque.
+    Sed rutrum ut tortor non porta. Etiam orci libero, elementum sit amet ipsum id, volutpat luctus nunc. Etiam hendrerit
+    suscipit dui, nec sagittis metus consectetur vitae. Nulla consequat quam a ante finibus, a dignissim sem porttitor. Nulla
+    vehicula imperdiet eros at tincidunt. Nullam laoreet molestie ipsum. Curabitur tempus semper ligula, in sollicitudin
+    erat sagittis eu. Vestibulum faucibus diam eget dolor consectetur aliquam. Cras non rutrum odio. Mauris eu libero tempus,
+    fringilla neque porttitor, fringilla diam. Vestibulum mattis venenatis velit. Proin condimentum metus et gravida lobortis.
+    Nunc varius nisl et iaculis efficitur. Duis scelerisque tortor a ipsum fermentum pharetra. Duis nec mauris ultricies
+    diam cursus pulvinar a ut eros. Morbi commodo enim vitae enim egestas rhoncus. Mauris rhoncus metus congue neque eleifend,
+    ut ultrices dui gravida. Donec in massa nec libero interdum mollis. Proin porta cursus diam, non ullamcorper nulla blandit
+    ac. Nullam vel quam dignissim, laoreet elit nec, imperdiet urna. Ut ut sapien et odio pulvinar tincidunt sed sit amet
+    lectus. Cras ac placerat lectus, eget fermentum quam. Quisque cursus dictum turpis, ut aliquam urna. Vestibulum ante
+    ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vestibulum at enim ullamcorper lorem faucibus
+    mollis. Nunc dolor tortor, porttitor vitae viverra nec, efficitur et lectus. Aliquam eget ultricies lorem, a aliquam
+    nisi. Duis feugiat mattis rhoncus. Sed tellus nisl, convallis nec ornare vel, facilisis eu nisl. Maecenas malesuada lectus
+    a sapien convallis, eu pharetra lorem facilisis. Etiam vitae nunc pharetra, facilisis velit ut, maximus dui. Quisque
+    non lorem feugiat, scelerisque nisi in, ultricies eros. Aliquam at mi eget purus imperdiet convallis vel euismod nulla.
+    Mauris consectetur dui et urna iaculis, quis aliquet orci cursus. Suspendisse urna sem, faucibus et elit a, hendrerit
+    sodales nisi. Quisque lorem odio, tristique sed velit sed, aliquet interdum orci. Nulla sed leo iaculis, blandit nibh
+    ut, luctus urna. Donec vehicula risus eget efficitur convallis. Donec lobortis tellus ex, ut ultrices orci ornare vel.
+    Morbi laoreet euismod dui, ac imperdiet sem mattis eget. Vivamus et erat vel justo egestas vehicula et finibus diam.
+    Donec maximus tincidunt elit et semper. Fusce efficitur bibendum ex, at feugiat purus pellentesque at. In molestie vulputate
+    orci, sed porta quam pharetra ac. Nulla vitae velit blandit, iaculis felis ut, commodo enim. Nullam lectus urna, fermentum
+    sit amet euismod hendrerit, varius in elit. Suspendisse lacinia cursus eros. Sed vel porta enim. Donec iaculis velit
+    sit amet maximus euismod. Praesent venenatis, quam eu porttitor faucibus, arcu felis hendrerit diam, non ornare odio
+    dui eu libero. Nullam nisl ex, vehicula eu tortor in, tincidunt commodo velit. Proin nunc elit, blandit a eros lacinia,
+    egestas scelerisque massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Etiam ut convallis orci.
   </div>
 
 </div>
