--- a/frontend/src/app/components/board/board-card/board-card.component.css
+++ b/frontend/src/app/components/board/board-card/board-card.component.css
@@ -32,3 +32,17 @@
   margin-top: 2px;
   margin-right: 2px;
 }
+
+.members {
+  float: right;
+}
+
+.member {
+  padding: 2px 4px;
+  background-color: #c3c8cb;
+  display: inline-block;
+  margin-left: 2px;
+  border-radius: 50%;
+  font-size: 9pt;
+  font-weight: bold;
+}
