--- a/frontend/src/app/components/topbar/topbar.component.html
+++ b/frontend/src/app/components/topbar/topbar.component.html
@@ -6,6 +6,6 @@
     <a [routerLink]="['/','team']">Boards.js</a>
   </span>
   <span>
-   {{global.name}}
+   {{global.name||userName}}
   </span>
 </mat-toolbar>
